--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,6 +11,9 @@ $error: $red-1;
 $transparent: rgba(67, 54, 54, 0.7);
 $text: $choco-1;
 
+$main: #0E2636;
+$white: #E4E8E9;
+
 $tr-time: .4s;
 
 $gap: 15px;
