--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,13 +9,16 @@ $red-2: #FF4F53;
 $gray: #D4D0C9;
 $error: $red-1;
 $transparent: rgba(67, 54, 54, 0.7);
-$text: $choco-1;
 
 $main: #0E2636;
 $white: #E4E8E9;
+$yellow-text: #F8CC15;
+$hover-yellow: #FFE100;
+$blue: #5ABFC6;
+$text: $white;
 
 $tr-time: .4s;
 
 $gap: 15px;
 $containerPadding: 20px;
-$containerWidth: 92.2vw;
+$containerWidth: 84.45vw;
