--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,6 @@
 @import 'common/counter';
 
 @import 'components/header';
+@import 'components/footer';
+@import 'components/horizontal-slider';
+@import 'components/main-section';
