--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,14 +1,19 @@
 :root{
-	// @include sizeFluid('font-size',16,24);
 	font-size: calcFluid(16,24,1280,1920);
 }
 body{
+	display: flex;
+	flex-direction: column;
 	min-height: 100vh;
 	margin: 0;
 	position: relative;
 	color: $text;
-	font-family: 'Arsenal', sans-serif;
-	background: $ivory-2;
+	font-family: 'Montserrat', sans-serif;
+	background: $main;
+}
+main{
+	display: flex;
+	flex-grow: 1;
 }
 *{
 	margin: 0;
@@ -49,6 +54,7 @@ a{
 	text-decoration: none;
 	transition: color $tr-time;
 	&:hover{
+		color: $hover-yellow;
 		text-decoration: none;
 	}
 }
