--- a/src/scss/common/_btn.scss
+++ b/src/scss/common/_btn.scss
@@ -2,49 +2,43 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: calcRem(46);
-    @include text16-bold;
-    transition-property: color, border-color, background-color;
+    height: calcRem(39);
+    font-size: calcRem(13);
+    line-height: 1.1;
+    font-weight: 700;
+    border-radius: 3px;
+    transition-property: color, border-color, background-color, box-shadow;
     transition-duration: $tr-time;
     cursor: pointer;
-    
-    &--transparent{
-        color: $choco-1;
-        border: 1px solid $choco-1;
+
+    &--main{
+        color: $main;
+        background: $yellow-text;
         &:not(:disabled):hover{
-            color: $ivory-2;
-            border-color: $red-1;
-            background: $red-1;
+            background: $hover-yellow;
+            box-shadow: 0px 5px 25px rgba(255, 199, 0, 0.49);
         }
+    }
+    &--transparent{
+        color: $yellow-text;
+        border: 1px solid $yellow-text;
+        &:not(:disabled):hover{
+            color: $main;
+            background: $hover-yellow;
+            box-shadow: 0px 5px 25px rgba(255, 199, 0, 0.49);
+        }
+    }
+    &--small{
+        height: calcRem(37);
+        font-size: calcRem(12);
     }
     &--inline{
         display: inline-flex;
-        padding: 0 calcRem(45);
     }
-    &--main{
-        color: $ivory-2;
-        background: $choco-1;
-        &:not(:disabled):hover{
-            background: $red-1;
-        }
+    &--pad29{
+        padding: 0 calcRem(29);
     }
-    &--ivory{
-        color: $choco-1;
-        background: $ivory-2;
-        &:not(:disabled):hover{
-            color: $ivory-2;
-            background: $red-1;
-        }
-    }
-    &--transparent-ivory{
-        color: $ivory-1;
-        border: 1px solid $ivory-1;
-        &:not(:disabled):hover{
-            color: $ivory-2;
-            border-color: $red-1;
-            background: $red-1;
-        }
-    }
+    
     &:disabled{
         color: transparent;
         transition-duration: 0s;
