--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,28 +1,134 @@
 .header{
-    padding: calcRem(10) 0 calcRem(11);
     position: sticky;
     top: 0;
     left: 0;
     background: $main;
-    &__search-icon{
-        width: calcRem(22);
-        height: calcRem(22);
-        fill: $white;
-        cursor: pointer;
+    &__action{
+        &-icon{
+            width: calcRem(22);
+            height: calcRem(22);
+            fill: $white;
+            cursor: pointer;
+            &:hover{
+                fill: $hover-yellow;
+            }
+        }
+    }
+    &__cart{
+        margin-left: calcRem(21);
     }
     &__container{
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
+    &__actions{
+        display: flex;
+        align-items: center;
+    }
+    &__tel{
+        display: block;
+        font-size: calcRem(12);
+        line-height: 1.08;
+        font-weight: 600;
+        &:not(:first-child){
+            margin-top: calcRem(5);
+        }
+    }
+    &__btn{
+        padding: 0 calcRem(21);
+        margin: 0 calcRem(23) 0 calcRem(29);
+    }
+    &__menu{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: max-content;
+        gap: calcRem(30);
+        align-items: center;
+        justify-content: end;
+        flex: 1 0 auto;
+        padding: 0 calcRem(40);
+        .menu-link{
+            display: flex;
+            align-items: center;
+            font-size: calcRem(13);
+            line-height: 1.46;
+            font-weight: 600;
+            svg{
+                width: calcRem(9);
+                height: calcRem(5);
+                margin-left: calcRem(5);
+                fill: $white;
+                transition-property: transform;
+                transition-duration: $tr-time;
+            }
+        }
+        >.menu-item{
+            padding: calcRem(22) 0;
+            position: relative;
+        }
+        .menu-item{
+            &:hover{
+                >.menu-link{
+                    color: $hover-yellow;
+                }
+            }
+            &.has-children{
+                &:hover{
+                    >.menu-link{
+                        color: $white;
+                        svg{
+                            transform: rotate(180deg);
+                            fill: $hover-yellow;
+                        }
+                    }
+                    >.sub-menu{
+                        transform: none;
+                        opacity: 1;
+                        pointer-events: all;
+                    }
+                }
+            }
+        }
+        .sub-menu{
+            position: absolute;
+            top: 100%;
+            left: calcRem(-30);
+            z-index: 1;
+            padding: calcRem(10) calcRem(48) calcRem(24) calcRem(30);
+            transform: translateX(calcRem(14));
+            background: $main;
+            opacity: 0;
+            border-radius: 0 0 3px 3px;
+            transition-property: transform, opacity;
+            transition-duration: $tr-time;
+            pointer-events: none;
+            .menu-link{
+                font-weight: 400;
+                font-size: calcRem(12);
+                line-height: 1.33;
+                white-space: nowrap;
+            }
+            .menu-item{
+                &:not(:first-child){
+                    margin-top: calcRem(12);
+                }
+            }
+        }
+    }
 }
 .header-logo{
-    display: block;
-    width: calcRem(73);
-    height: calcRem(42);
+    display: flex;
+    align-items: center;
     &__img{
-        width: 100%;
-        height: 100%;
+        width: calcRem(73);
+        height: calcRem(42);
         object-fit: contain;
+    }
+    &__text{
+        margin-left: calcRem(13);
+        font-size: calcRem(11);
+        line-height: 1.3;
+        font-weight: 500;
     }
 }
