--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,3 +22,8 @@
 @import 'components/footer';
 @import 'components/horizontal-slider';
 @import 'components/main-section';
+@import 'components/services-section';
+@import 'components/form-section';
+@import 'components/catalog-section';
+@import 'components/link-to-all';
+@import 'components/catalog';
