--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -50,6 +50,17 @@
 		color: $blue;
 	}
 }
+.stain{
+	position: absolute;
+	width: calcRem(866);
+	height: calcRem(885);
+	filter: blur(190px);
+	&__icon{
+		width: 100%;
+		height: 100%;
+		fill: #2CE8F4;
+	}
+}
 
 @media (max-width: 1279px){
 	.container{
