--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -8,6 +8,9 @@
     flex-direction: column;
     border-radius: 5px;
     overflow: hidden;
+    color: #333;
+    background: #F1FDFF;
+    transition: box-shadow $tr-time;
     &__top{
         display: block;
         position: relative;
@@ -26,5 +29,27 @@
         flex-direction: column;
         flex: 1 0 auto;
         padding: calcRem(14) calcRem(26) calcRem(25);
+    }
+    &__name{
+        margin: 0 0 calcRem(9);
+        font-size: calcRem(14);
+        line-height: 1.4;
+        font-weight: 700;
+    }
+    &__size{
+        font-size: calcRem(12);
+    }
+    &__price{
+        font-size: calcRem(14);
+        line-height: 1.4;
+        font-weight: 700;
+        &-row{
+            padding: calcRem(15) 0 0;
+            margin: auto 0 calcRem(16);
+        }
+    }
+    &:hover{
+        color: #333;
+        box-shadow: 0px 5px 25px rgba(2, 177, 188, 0.5);
     }
 }
