--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,3 +27,5 @@
 @import 'components/catalog-section';
 @import 'components/link-to-all';
 @import 'components/catalog';
+@import 'components/advantages-section';
+@import 'components/hand-section'
