--- a/src/scss/components/_hand-section.scss
+++ b/src/scss/components/_hand-section.scss
@@ -1,5 +1,19 @@
 .hand-section{
+    width: calcRem(477);
     &__img{
-        height: calcRem(565);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+@media (max-width: 1279px){
+    .hand-section{
+        width: auto;
+        &__img{
+            display: none;
+        }
     }
 }
