--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'common/modal';
 @import 'common/custom-radio';
 @import 'common/counter';
+@import 'common/mobile-menu';
 
 @import 'components/header';
 @import 'components/footer';
