--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,7 @@
     z-index: 10;
     background: $main;
     &__action{
+        margin-left: calcRem(21);
         &-icon{
             width: calcRem(22);
             height: calcRem(22);
@@ -16,7 +17,6 @@
         }
     }
     &__cart{
-        margin-left: calcRem(21);
     }
     &__container{
         display: flex;
@@ -131,5 +131,31 @@
         font-size: calcRem(11);
         line-height: 1.3;
         font-weight: 500;
+    }
+}
+
+@media (min-width: 1280px){
+    .header-burger{
+        display: none;
+    }
+}
+
+@media (max-width: 1279px){
+    .header{
+        padding: calcRem(10) 0;
+        .header{
+            &__menu, &__tels, &__btn{
+                display: none;
+            }
+            &-logo{
+                &__text{
+                    display: none;
+                }
+                &__img{
+                    width: auto;
+                    height: calcRem(38);
+                }
+            }
+        }
     }
 }
