--- a/src/scss/components/_horizontal-slider.scss
+++ b/src/scss/components/_horizontal-slider.scss
@@ -37,8 +37,8 @@
     }
 }
 
-@media (max-width: 1023px){
+@media (max-width: 1279px){
     .horizontal-slider{
-        // display: none;
+        overflow: auto;
     }
 }
