--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,12 +21,15 @@
 
 @import 'components/header';
 @import 'components/footer';
+@import 'components/catalog';
 @import 'components/horizontal-slider';
 @import 'components/main-section';
 @import 'components/services-section';
 @import 'components/form-section';
 @import 'components/catalog-section';
 @import 'components/link-to-all';
-@import 'components/catalog';
 @import 'components/advantages-section';
-@import 'components/hand-section'
+@import 'components/hand-section';
+@import 'components/scheme-section';
+@import 'components/imgs-section';
+@import 'components/partners-section';
