--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -53,3 +53,16 @@
         box-shadow: 0px 5px 25px rgba(2, 177, 188, 0.5);
     }
 }
+@media (max-width: 991px){
+    .products-grid{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width: 767px){
+    
+}
+@media (max-width: 575px){
+    .products-grid{
+        grid-template-columns: 1fr;
+    }
+}
