--- a/src/scss/components/_services-section.scss
+++ b/src/scss/components/_services-section.scss
@@ -29,6 +29,7 @@
         align-items: center;
     }
     &__icon{
+        height: calcRem(78);
     }
     &__title{
         display: block;
@@ -44,5 +45,34 @@
         right: -20px;
         opacity: 0.1;
         pointer-events: none;
+    }
+}
+
+@media (max-width: 1279px){
+    .service-block{
+        &__icon{
+            height: calcRem(62);
+        }
+        &__top{
+            padding: calcRem(12) 0 0;
+            height: calcRem(110);
+        }
+        &__title{
+            font-size: calcRem(14);
+        }
+    }
+}
+@media (max-width: 991px){
+    .services-section{
+        &__grid{
+            grid-template-columns: repeat(2,1fr);
+        }
+    }
+}
+@media (max-width: 575px){
+    .services-section{
+        &__grid{
+            grid-template-columns: 1fr;
+        }
     }
 }
