Сделал блок сео-текста, исправил баг с изображением в схеме работы растягивающим высоту слайдера больше высоты экрана

--- a/src/scss/components/_hand-section.scss
+++ b/src/scss/components/_hand-section.scss
@@ -1,7 +1,7 @@
 .hand-section{
     &__img{
+        display: none;
         height: 100%;
-        width: calcRem(477);
         object-fit: cover;
     }
 }
