--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,3 +33,4 @@
 @import 'components/scheme-section';
 @import 'components/imgs-section';
 @import 'components/partners-section';
+@import 'components/seo-section';
