--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -46,7 +46,7 @@
 }
 @mixin text14 {
 	font-size: calcRem(14);
-	line-height: 1.3;
+	line-height: 1.4;
 }
 @mixin text16 {
 	font-size: calcRem(16);
@@ -59,4 +59,25 @@
 @mixin text16-bold {
 	@include text16;
 	font-weight: 700;
+}
+
+@mixin scrollbar-style(
+  $size: 10px,
+  $foreground-color: #999,
+  $background-color: #333
+) {
+  // For Chrome & Safari
+  &::-webkit-scrollbar {
+    width: $size;
+    height: $size;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $foreground-color;
+  }
+  &::-webkit-scrollbar-track {
+    background: $background-color;
+  }
+
+  // Standard version (Firefox only for now)
+  scrollbar-color: $foreground-color $background-color;
 }
