--- a/src/scss/components/_horizontal-slider.scss
+++ b/src/scss/components/_horizontal-slider.scss
@@ -1,5 +1,6 @@
 .horizontal-slider{
     &__slide{
+        height: auto;
         &--auto{
             width: auto;
         }
@@ -37,19 +38,6 @@
         }
     }
     &__wrapper{
-
-    }
-}
-
-@media (max-width: 1279px){
-    .horizontal-slider{
-        overflow: auto;
-        &__wrapper{
-            align-items: flex-start;
-        }
-        &__slide{
-            height: auto;
-        }
     }
 }
 @media (max-width: 1279px){
@@ -74,6 +62,9 @@
                     bottom: 5%;
                     right: -54%;
                 }
+            }
+            &-5{
+                display: block;
             }
         }
     }
