--- a/src/scss/components/_hand-section.scss
+++ b/src/scss/components/_hand-section.scss
@@ -1,6 +1,11 @@
 .hand-section{
+    width: calcRem(477);
     &__img{
-        display: none;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
         height: 100%;
         object-fit: cover;
     }
