--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,3 +34,5 @@
 @import 'components/imgs-section';
 @import 'components/partners-section';
 @import 'components/seo-section';
+@import 'components/contacts-section';
+@import 'components/contacts';
