Сделал контакты и анимацию

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -9,7 +9,7 @@ body{
 	position: relative;
 	color: $text;
 	font-family: 'Montserrat', sans-serif;
-	background: linear-gradient(180deg, #1D3B4F 0%, #0F2D41 0.01%, #194155 100%);
+	background: #1D3B4F;
 }
 main{
 	flex-grow: 1;
