--- a/src/scss/common/_breadcrumbs.scss
+++ b/src/scss/common/_breadcrumbs.scss
@@ -1,12 +1,17 @@
 .breadcrumbs{
-    color: $choco-3;
+    color: #fff;
     li{
         display: inline;
+        font-size: calcRem(12);
+        line-height: 1.89;
     }
     a{
-        color: $choco-1;
+        color: #fff;
         &:hover{
-            color: $red-1;
+            color: $hover-yellow;
         }
+    }
+    span{
+        color: rgba(#fff, .4);
     }
 }
