--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -24,6 +24,15 @@
             }
         }
     }
+    &-worktime{
+        margin-bottom: calcRem(30);
+        font-size: calcRem(14);
+        line-height: 1.43;
+        color: rgba(#fff, .6);
+        span{
+            color: #fff;
+        }
+    }
 
     $this: &;
     &__group{
@@ -37,5 +46,63 @@
         margin-bottom: calcRem(20);
         font-size: calcRem(14);
         line-height: 1.43;
+    }
+    &__title{
+        margin-bottom: calcRem(40);
+    }
+    &__grid{
+        display: grid;
+        grid-template-columns: auto 66%;
+        gap: calcRem(30) calcRem(54);
+    }
+    &__map{
+        height: 100%;
+        background: $white;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+    &__info-col{
+        padding: calcRem(7) 0 0;
+    }
+}
+
+.contacts-page{
+    &__address{
+        margin-top: calcRem(30);
+    }
+    &__tels{
+        margin-bottom: calcRem(16);
+    }
+    &__vk{
+        margin-bottom: calcRem(12);
+    }
+}
+.contact-icon{
+    display: inline-block;
+    svg{
+        width: calcRem(24);
+        height: calcRem(24);
+        fill: $yellow-text;
+    }
+}
+
+@media (max-width: 1279px){
+    .contacts{
+        &__grid{
+            gap: calcRem(30);
+        }
+    }
+}
+@media (max-width: 767px){
+    .contacts{
+        &__grid{
+            display: block;
+        }
+        &__map{
+            height: calcRem(320);
+            &-col{
+                margin-top: calcRem(30);
+            }
+        }
     }
 }
