Сделал модалку обратного звонка, страницу Категории продукции, начал Каталог

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,6 +15,8 @@ $white: #E4E8E9;
 $yellow-text: #F8CC15;
 $hover-yellow: #FFE100;
 $blue: #5ABFC6;
+$light-card: #F1FDFF;
+$stain-color: #2CE8F4;
 $text: $white;
 
 $tr-time: .4s;
