--- a/src/scss/common/_mobile-menu.scss
+++ b/src/scss/common/_mobile-menu.scss
@@ -24,6 +24,9 @@
     &__footer{
         padding: calcRem(20) calcRem(22);
     }
+    &__btn{
+        margin-bottom: calcRem(20);
+    }
 
     $this: &;
     &.opened{
