--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -32,6 +32,13 @@
 		object-fit: cover;
 	}
 }
+.collapse{
+    overflow: hidden;
+    transition: height $tr-time*2;
+    &.is-collapsed{
+        height: 0;
+    }
+}
 .fullhd-container{
 	max-width: 1920px;
 	margin: 0 auto;
@@ -54,20 +61,33 @@
 	position: absolute;
 	width: calcRem(866);
 	height: calcRem(885);
-	filter: blur(190px);
+	animation: blur 5s ease-in-out 0s infinite alternate forwards;
 	&__icon{
 		width: 100%;
 		height: 100%;
 		fill: #2CE8F4;
+		animation: fill 4s ease-in-out 0s infinite alternate forwards;
 	}
 }
 
+
 @keyframes blur {
-	from{
+	0%{
 		filter: blur(80px);
 	}
-	to{
+	100%{
 		filter: blur(190px);
+	}
+}
+@keyframes fill {
+	0%{
+		fill: $stain-color;
+	}
+	50%{
+		fill: $light-card;
+	}
+	100%{
+		fill: $blue;
 	}
 }
 
