--- a/src/scss/components/_services-section.scss
+++ b/src/scss/components/_services-section.scss
@@ -21,6 +21,31 @@
     &:hover{
         color: $main;
     }
+    &__overlay{
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        opacity: 0;
+        overflow: hidden;
+        transition: opacity $tr-time;
+        &::after{
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: linear-gradient(180deg, rgba(248, 204, 21, 0) 0%, rgba(20, 44, 61, 0.58) 74.48%, #142C3D 100%);
+        }
+    }
+    &__img{
+        width: 100%;
+        height: 100%;
+    }
     &__top{
         height: calcRem(139);
         padding: calcRem(18) 0 0;
@@ -33,10 +58,13 @@
     }
     &__title{
         display: block;
+        position: relative;
+        z-index: 1;
         font-size: calcRem(16);
         line-height: 1.2;
         font-weight: 700;
         text-align: center;
+        transition: color $tr-time;
     }
     &__bg{
         position: absolute;
@@ -45,6 +73,16 @@
         right: -20px;
         opacity: 0.1;
         pointer-events: none;
+    }
+
+    $this: &;
+    &:hover{
+        #{$this}__overlay{
+            opacity: 1;
+        }
+        #{$this}__title{
+            color: $yellow-text;
+        }
     }
 }
 
