--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'common/custom-radio';
 @import 'common/counter';
 @import 'common/mobile-menu';
+@import 'common/range-slider';
 
 @import 'components/header';
 @import 'components/footer';
