--- a/src/scss/common/_btn.scss
+++ b/src/scss/common/_btn.scss
@@ -29,6 +29,16 @@
             box-shadow: 0px 5px 25px rgba(255, 199, 0, 0.49);
         }
     }
+    &--transparent-dark{
+        color: $main;
+        border: 1px solid $main;
+        &:not(:disabled):hover{
+            color: $main;
+            border-color: transparent;
+            background: $light-card;
+            box-shadow: 0px 5px 25px rgba(2, 177, 188, 0.49);
+        }
+    }
     &--small{
         height: calcRem(37);
         font-size: calcRem(12);
@@ -41,6 +51,14 @@
     }
     &--pad60{
         padding: 0 calcRem(60);
+    }
+    &--main-dark{
+        color: $light-card;
+        background: $main;
+        &:not(:disabled):hover{
+            background: #345367;
+            box-shadow: 0px 5px 25px rgba(2, 74, 158, 0.49);
+        }
     }
     
     &:disabled{
